--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,4 @@
 
-afterstep/asetroot
-afterstep/audio
-afterstep/autoexec
-afterstep/base.15bpp
-afterstep/base.16bpp
-afterstep/base.24bpp
-afterstep/base.32bpp
-afterstep/base.8bpp
-afterstep/compatibility
-afterstep/pager
-afterstep/start/.include
-afterstep/start/Desktop/Feel/.include
-afterstep/start/Desktop/Look/.include
-afterstep/start/Desktop/Pictures/.include
-afterstep/start/Desktop/Theme/.include
-afterstep/wharf
-afterstep/zharf
-asimagelib/Makefile
-autoconf/Makefile.common
-autoconf/Makefile.common.lib
-autoconf/Makefile.defines
-config.h
-config.log
-config.status
-configure.h
-doc/afterstepdoc
-doc/Makefile
-lib/Makefile
-Makefile
-src/afterstep/Makefile
-src/Animate/Makefile
-src/asetroot/Makefile
-src/Audio/Makefile
-src/Banner/Makefile
-src/Cascade/Makefile
-src/Clean/Makefile
-src/Config/Makefile
-src/Form/Makefile
-src/Gnome/Makefile
-src/Ident/Makefile
-src/Pager/Makefile
-src/Save/Makefile
-src/Script/Makefile
-src/Script/Widgets/Makefile
-src/Scroll/Makefile
-src/Sound/Makefile
-src/test/Makefile
-src/Tile/Makefile
-src/Wharf/Makefile
-src/WinList/Makefile
-src/Zharf/Makefile
-tools/installastheme.pl
-tools/makeastheme.pl
-tools/Makefile
 lib/ASmodule.o
 lib/audit.o
 lib/catstring3.o
@@ -120,3 +66,4 @@ src/Wharf/icons.o
 src/Wharf/Wharf.o
 */.DS_Store
 *.DS_Store
+TODO/.DS_Store
